Replace full name with first name and last name, validate user on meeting update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
         build: .
         ports: 
             - "9000:1337"
-        volumes:
-            - .:/app
+        # volumes:
+        #     - .:/app
         # environment: 
         #     NODE_ENV: production
         links:
