--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sails-hook-organics": "^2.0.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
-    "sails-mongo": "^1.2.0"
+    "sails-mongo": "^1.2.0",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "eslint": "5.16.0",
